tests/typing/bad/testfile-plus_string3-1.scala
class M { def m() { var s: Int = "" } }

object Main { def main(args: Array[String]) { } }
